# Axum-Rust-Rest-Api-Template

./: .env  Cargo.toml  README.md
migrations/: 20230501172218_user.sql
src/: main.rs
src/config/: database.rs  mod.rs  parameter.rs
src/dto/: mod.rs  token_dto.rs  user_dto.rs
src/entity/: user.rs
src/error/: api_error.rs  db_error.rs  mod.rs  request_error.rs  token_error.rs  user_error.rs
src/handler/: auth_handler.rs  mod.rs  profile_handler.rs  register_handler.rs
src/middleware/: auth.rs  logger.rs
src/repository/: mod.rs  user_repository.rs
src/response/: api_response.rs  mod.rs
src/routes/: auth.rs  mod.rs  profile.rs  register.rs  root.rs
src/service/: mod.rs  token_service.rs  user_service.rs
src/state/: auth_state.rs  mod.rs  token_state.rs  user_state.rs
